--- a/styles/less/grid.less
+++ b/styles/less/grid.less
@@ -1,6 +1,67 @@
-
 /**
  * Variables
  */
-@bodyWidth: 600px;
 
+/* width of main container */
+@bodyWidth:  900px ;
+/* Set the spacing between your grid items. */
+@gutter:  10px ;
+
+
+
+.container {
+	width: @bodyWidth;
+	margin: 0 auto;
+	background-color: #CCC;
+}
+/**
+ * Set the spacing between your grid items.
+ */ 
+.columns {
+	list-style: none; /* [1] */
+	margin: 0; /* [2] */
+	padding: 0; /* [2] */
+	margin-left: -@gutter/2; /* [3] */
+	width: @bodyWidth;
+}
+
+/**
+ * overflow: hidden - Thanks Csswizadry! If you want to know more check these links:
+ * http://www.stubbornella.org/content/2009/07/23/overflow-a-secret-benefit/
+ */
+.thumb-frame {
+	box-shadow: 0px 0px 2px #555;
+	background-color: #FFF;
+	/* min-height: 120px; */
+	overflow: hidden;
+	
+	/* animation */
+	-webkit-transition: 0.16s;
+	   -moz-transition: 0.16s;
+	        transition: 0.16s;
+	margin: 20px 10px 10px 10px;
+	padding: 0;
+	border: 5px #FFF solid;
+}
+
+.thumb-frame:hover {
+	box-shadow: 0px 0px 3px #222;
+	padding: 17px 5px 7px 5px;
+	margin: 3px 5px;
+}
+
+.column {
+	display: inline-block; /* Cause columns to stack side-by-side. */
+	padding: 0px 0px @gutter @gutter; /* Space columns apart. */
+	vertical-align: top; /* Align columns to the tops of each other. */
+	width: 100%; /* Full-width unless told to behave otherwise. */
+	
+	/* Required to combine fluid widths and fixed gutters. */
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
+.thumb {
+	width: 33.33%;
+}
