[no-ref] example index and subpage

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -1,13 +1,15 @@
+/**
+ * Variables
+ */
+@reniasGreen: rgb(50,162,0);
+@lightGray: #e5e5e5;
 
+/**
+ * Imports
+ */
 @import "reset.less";
+@import "page.less";
 @import "grid.less";
-
-h1 {
-	margin: 20px auto;
-	color: #5B83AD;
-	width: @bodyWidth;
-	border-bottom: 2px solid (#5B83AD + #444);
-}
 
 /* shame.css - http://csswizardry.com/2013/04/shame-css/ */
 @import "shame.less";
