--- a/styles/less/grid.less
+++ b/styles/less/grid.less
@@ -3,7 +3,7 @@
  */
 
 /* width of main container */
-@bodyWidth:  900px;
+@bodyWidth:  1100px;
 /* Set the spacing between your grid items. */
 @gutter:  10px;
 
@@ -17,8 +17,9 @@
 .container {
 	width: @bodyWidth;
 	margin: 0 auto;
-	background-color: #CCC;
+	//background-color: #CCC;
 }
+
 /**
  * Set the spacing between your grid items.
  */ 
@@ -78,6 +79,21 @@
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 	        box-sizing: border-box;
+}
+
+// columns definitions
+.one-half {
+	width: 50%;
+}
+.one-third {
+	width: 33.33%;
+}
+.one-fourth {
+	width: 25%;
+}
+// twos
+.two-thirds {
+	width: 66.66%;
 }
 
 
