--- a/styles/less/reset.less
+++ b/styles/less/reset.less
@@ -1,8 +1,16 @@
 /**
+ *
+ */
+body, html {
+	margin: 0;
+	padding: 0;
+}
+
+/**
  * Display in IE6-9 and FF3
  */
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section
-	{
+{
 	display: block;
 }
 
