--- a/styles/less/grid.less
+++ b/styles/less/grid.less
@@ -106,10 +106,12 @@
 		width: @screenLap;
 	}
 	.columns {
-		width: @screenLap;
 	}
 	.thumb {
 		width: 50%;
+	}
+	.one-third {
+		width: 50%
 	}
 }
 
@@ -126,5 +128,8 @@
 		img {
 			width: 100%;
 		}
+	}
+	.one-third {
+		width: 100%
 	}
 }
