--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -1,5 +1,5 @@
 body {
-//	background: url("../gfx/bg.png") repeat-x top left;
+	background: url("../gfx/bg.png") repeat-x 40px 0;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
@@ -15,7 +15,7 @@ body {
 	// decoration
 //	background-color: @lightGray;
 	background-color: #FFF;
-//	box-shadow: 2px 0 6px rgba(0, 0, 0, 0.5);
+	box-shadow: 2px 0 8px rgba(0, 0, 0, 0.5);
 }
 
 /**
@@ -37,8 +37,10 @@ body {
 
 .footer {
 	padding: @gutter 0 3*@gutter 0;
-	background-color: @lightGray;
-	color: rgba(0,0,0,0.6);
+	// background-color: @lightGray;
+	// color: rgba(0,0,0,0.6);
+	background-color: #1D1D1D;
+	color: #ADADAD;
 }
 
 // Gallery header
@@ -49,6 +51,25 @@ body {
 	font-weight: normal;
 	margin: @gutter 0 @gutter/2 0;
 	text-align: center;
+}
+
+.gallery-item .caption,
+.gallery-item .subcaption {
+	text-shadow: 0px 0px 4px rgba(0,0,0,0.3);
+	color: rgba(0,0,0,0.3);
+	
+	/* animation */
+	-webkit-transition: 0.3s;
+	   -moz-transition: 0.3s;
+	        transition: 0.3s;
+}
+.gallery-item:hover .caption,
+.gallery-item:hover .subcaption {
+	color: #000;
+	text-shadow: 0 0 0 rgba(0,0,0,0.5);
+}
+.gallery-item:hover {
+	//background-color: @lightGray;
 }
 // Gallery header
 .subcaption {
