--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -36,11 +36,11 @@ body {
 }
 
 .footer {
-	padding: @gutter 0 3*@gutter 0;
+	padding: @gutter 0 @gutter 0;
 	// background-color: @lightGray;
 	// color: rgba(0,0,0,0.6);
-	background-color: #1D1D1D;
-	color: #ADADAD;
+	background-color: rgb(182,225,137);
+	color: rgb(0,0,0);
 }
 
 // Gallery header
