--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -3,7 +3,7 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
-	color: #3D3D3D;
+	color: #505050;
 }
 
 .topbar {
@@ -52,33 +52,31 @@ body {
 	background-color: @reniasGreen;
 	// color: rgba(0,0,0,0.6);
 	//background-color: #1D1D1D;
-	color: #3D3D3D;
-	text-shadow: 0px 1px 0px rgba(255,255,255,.3);
+	color: #505050;
+	text-shadow: 0px 1px 0px rgba(255,255,255,.7);
 	
-	background-image: linear-gradient(bottom, rgb(42,133,0) 99%, rgb(51,162,0) 85%);
-	background-image: -o-linear-gradient(bottom, rgb(42,133,0) 99%, rgb(51,162,0) 85%);
-	background-image: -moz-linear-gradient(bottom, rgb(42,133,0) 99%, rgb(51,162,0) 85%);
-	background-image: -webkit-linear-gradient(bottom, rgb(42,133,0) 99%, rgb(51,162,0) 85%);
-	background-image: -ms-linear-gradient(bottom, rgb(42,133,0) 99%, rgb(51,162,0) 85%);
-	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.99, rgb(42,133,0)), color-stop(0.96, rgb(51,162,0)));
-	
+	background-image: linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	background-image: -o-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	background-image: -moz-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	background-image: -webkit-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	background-image: -ms-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.99, #97C54B), color-stop(0.96, rgb(177, 218, 118)));
 	
 	.name {
 		font-variant: small-caps;
 		font-size: 16px;
-		
 	}
 }
 
 .footer-logo {
 	//text-shadow: 0 0 10px rgba(0,0,0, 0.4);
-	text-shadow: 0 1px 0 rgba(255,255,255,.2), 0 0 30px rgba(0,0,0,.05);
+	text-shadow: 0 1px 0 rgba(255,255,255,.4), 0 0 30px rgba(0,0,0,.15);
 	display: block;
 	text-align: center;
 	font-size: 20px;
 	text-transform: uppercase;
-	color: rgb(40,152,0);
-	margin: 80px 0;
+	color: #97C54B;
+	margin: 24px 0;
 	font-weight: bold;
 }
 
