Work in progess

--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -14,9 +14,9 @@ body {
 	left: 0;
 	
 	// decoration
-//	background-color: @lightGray;
+	//background-color: @reniasGreen;
 	background-color: #FFF;
-	box-shadow: 2px 0 8px rgba(0, 0, 0, 0.5);
+	box-shadow: 2px 0 8px rgba(50, 162, 0, 0.5);
 }
 .hero {
 	
@@ -48,7 +48,7 @@ body {
 }
 
 .footer {
-	padding: 2*@gutter 0 2*@gutter 0;
+	padding: @gutter 0 @gutter 0;
 	background-color: @reniasGreen;
 	// color: rgba(0,0,0,0.6);
 	//background-color: #1D1D1D;
@@ -83,7 +83,7 @@ body {
 
 // Gallery header
 .caption {
-	text-transform: uppercase;
+	//text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 18px;
 	font-weight: normal;
