--- a/styles/less/shame.less
+++ b/styles/less/shame.less
@@ -3,3 +3,9 @@
  *
  * The code you have to write to get the release out on time, but the code that makes you ashamed.
  */
+ 
+.link {
+	color: @reniasGreen;
+	font-weight: bold;
+	text-decoration: none;
+}
