--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -14,9 +14,9 @@ body {
 	left: 0;
 	
 	// decoration
-	//background-color: @reniasGreen;
+	background-color: @lightGray;
 	background-color: #FFF;
-	box-shadow: 2px 0 8px rgba(50, 162, 0, 0.5);
+	box-shadow: 2px 0 8px rgba(0, 0, 0, 0.5);
 }
 .hero {
 	
@@ -124,7 +124,7 @@ body {
 .arrow_box {
 	position: relative;
 }
-.arrow_box:after, .arrow_box:before {
+.arrow_box:after {
 	top: 100%;
 	border: solid transparent;
 	content: " ";
@@ -138,13 +138,6 @@ body {
 	border-color: rgba(255, 255, 255, 0);
 	border-top-color: #FFF;
 	border-width: 60px;
-	left: 10%;
+	left: 90%;
 	margin-left: -60px;
-}
-.arrow_box:before {
-	border-color: rgba(194, 225, 245, 0);
-	border-top-color: #c2e1f5;
-	border-width: 0px;
-	left: 10%;
-	margin-left: -36px;
 }
