--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -3,20 +3,22 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
-	color: #505050;
+	color: #303030;
 }
 
 .topbar {
 	// stick to top
 	position: fixed;
+	z-index: 1000;
 	width: 100%;
+	height: 80px;
 	top: 0;
 	left: 0;
 	
 	// decoration
-	background-color: @lightGray;
+//	background-color: @lightGray;
 	background-color: #FFF;
-	box-shadow: 2px 0 8px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
 .hero {
 	
@@ -28,6 +30,18 @@ body {
 	p {
 		.subcaption;
 	}
+}
+
+h2 {
+	font-family: 'HelveticaNeue-Light', Helvetica, Arial, sans-serif;;
+	font-size: 24px;
+	letter-spacing: 1px;
+}
+.columns p {
+	font-family: 'HelveticaNeue-Light', Helvetica, Arial, sans-serif;;
+	font-size: 16px;
+	letter-spacing: 0px;
+	line-height: 24px;
 }
 
 /**
@@ -48,11 +62,11 @@ body {
 }
 
 .footer {
-	padding: @gutter 0 @gutter 0;
+	padding: @gutter 0 0 0;
 	background-color: @reniasGreen;
-	// color: rgba(0,0,0,0.6);
-	//background-color: #1D1D1D;
-	color: #505050;
+	//color: #505050;
+	//color: rgba(0,0,0,0.6);
+	//background-color: @lightGray;
 	text-shadow: 0px 1px 0px rgba(255,255,255,.7);
 	
 	background-image: linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
@@ -61,7 +75,7 @@ body {
 	background-image: -webkit-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
 	background-image: -ms-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
 	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.99, #97C54B), color-stop(0.96, rgb(177, 218, 118)));
-	
+
 	.name {
 		font-variant: small-caps;
 		font-size: 16px;
@@ -81,9 +95,12 @@ body {
 }
 
 
+
+.X {
+	
 // Gallery header
 .caption {
-	//text-transform: uppercase;
+	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 18px;
 	font-weight: normal;
@@ -108,6 +125,8 @@ body {
 }
 .gallery-item:hover {
 	//background-color: @lightGray;
+}
+
 }
 // Gallery header
 .subcaption {
