Gray footer, Calibri font

--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -1,6 +1,6 @@
 body {
 	background: url("../gfx/bg.png") repeat-x 40px 0;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Calibri", Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
 	color: #303030;
@@ -33,12 +33,12 @@ body {
 }
 
 h2 {
-	font-family: 'HelveticaNeue-Light', Helvetica, Arial, sans-serif;;
+	font-family: "Calibri", Arial, sans-serif;;
 	font-size: 24px;
 	letter-spacing: 1px;
 }
 .columns p {
-	font-family: 'HelveticaNeue-Light', Helvetica, Arial, sans-serif;;
+	font-family: "Calibri", Arial, sans-serif;;
 	font-size: 16px;
 	letter-spacing: 0px;
 	line-height: 24px;
@@ -62,19 +62,19 @@ h2 {
 }
 
 .footer {
-	padding: @gutter 0 0 0;
-	background-color: @reniasGreen;
+	padding: @gutter*0.5 0 0 0;
+	//background-color: @reniasGreen;
 	//color: #505050;
-	//color: rgba(0,0,0,0.6);
-	//background-color: @lightGray;
-	text-shadow: 0px 1px 0px rgba(255,255,255,.7);
+	color: #CDCDCD;
+	background-color: #393939;
+	//text-shadow: 0px 1px 0px rgba(255,255,255,.7);
 	
-	background-image: linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	background-image: -o-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	background-image: -moz-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	background-image: -webkit-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	background-image: -ms-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.99, #97C54B), color-stop(0.96, rgb(177, 218, 118)));
+	//background-image: linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	//background-image: -o-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	//background-image: -moz-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	//background-image: -webkit-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	//background-image: -ms-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
+	//background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.99, #97C54B), color-stop(0.96, rgb(177, 218, 118)));
 
 	.name {
 		font-variant: small-caps;
