--- a/styles/less/grid.less
+++ b/styles/less/grid.less
@@ -81,6 +81,18 @@
 	        box-sizing: border-box;
 }
 
+.column_np {
+	display: inline-block; /* Cause columns to stack side-by-side. */
+	padding: 0px 0px 0px @gutter; /* Space columns apart. */
+	vertical-align: top; /* Align columns to the tops of each other. */
+	width: 100%; /* Full-width unless told to behave otherwise. */
+	
+	/* Required to combine fluid widths and fixed gutters. */
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
 // columns definitions
 .one-half {
 	width: 50%;
