--- a/sgallery/templates/renata-kowalczuk.eu/page.html
+++ b/sgallery/templates/renata-kowalczuk.eu/page.html
@@ -2,6 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>{{page.title}}</title>
+	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/css/main.css">
 	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/hoborglabs/css/main.css">
 	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 </head>
