[refs #2] moving gallery images to separate folder.
* few tpl and css fixes

--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -1,50 +1,59 @@
 <div class="topbar">
 	<div class="container">
-	<img class="logo" src="images/logo.png" />
-	<ul class="breadcrumb">
-		{{#slugs}}
-		<li class="{{class}}">
-			{{# href }}<a href="/albums{{ href }}">{{/href}}
-				{{ text }}
-			{{# href }}</a> <span class="divider">/</span>{{/href}}
-		</li>
-		{{/slugs}}
-	</ul>
+		<a href="/"><img class="logo" src="/images/logo.png" style="float: left; width: 300px" /></a>
+		<ul class="navigation" style="float: left; width: 500px">
+			<!-- 
+			<li><a class="navigation--link" href="#">Oferta</a></li>
+			 -->
+			<li><a class="navigation--link navigation--active" href="/realizacje">Realizacje</a></li>
+			<li><a class="navigation--link" href="#">Kontakt</a></li>
+			<!-- 
+			<li><a class="navigation--link" href="#">Inspiracje</a></li>
+			<li><a class="navigation--link" href="#">Referencje</a></li>
+			 -->
+		</ul>
+		<ul class="navigation navigation--sub" style="float: left; width: 500px">
+			{{#slugs}}
+			<li class="{{class}}">
+				{{# href }}<a class="navigation--link" href="/albums{{ href }}">{{/href}}
+					{{ text }}
+				{{# href }}</a> <span class="divider">/</span>{{/href}}
+			</li>
+			{{/slugs}}
+		</ul>
 	</div>
 </div>
 
-<div class="columns gallery">
-	<div id="album" class="">
+<div id="album" class="">
 
-		<h2>{{ i18n.album }} - {{ name }}</h2>
-		<p class="lead">{{ meta }}</p>
-
-
-		{{#has_albums}}
-		<h3>{{ i18n.albums }}</h3>
-		<div>
-			<!-- 
-			{{#albums}}
-				--><div class="column one-third">
-					<div class="gallery-item">
-						<a href="/albums/{{ slug }}"><img src="{{ cover }}" /></a>
-						<h4>{{ name }}</h4>
-					</div>
-				</div><!--
-			{{/albums}}
-			-->
-		</div>
-		{{/has_albums}}
-
-		{{#has_photos}}
-		<h3>{{ i18n.photos }}</h3>
-		<div>
-			<ul class="grid" id="photos">
-			</ul>
-			<div class="well" style="display:none;">
-				<span>Loading...</span>
+	<div class="container">
+		<div class="columns">
+			<div class="column">
+				<h2>{{ name }}</h2>
+				<p class="lead">{{ meta }}</p>
 			</div>
 		</div>
-		{{/has_photos}}
 	</div>
+
+	{{#has_albums}}
+	<div class="columns gallery"><!-- 
+		{{#albums}}
+		--><div class="column one-fourth">
+			<div class="gallery-item">
+				<a href="/albums/{{ slug }}"><img src="{{ cover }}" /></a>
+				<h4>{{ name }}</h4>
+			</div>
+		</div><!--
+		{{/albums}}
+	--></div>
+	{{/has_albums}}
+
+	{{#has_photos}}
+	<div class="columns gallery">
+		<div id="photos"></div>
+		<div class="well" style="display:none;">
+			<span>Loading...</span>
+		</div>
+	</div>
+	{{/has_photos}}
 </div>
