--- a/sgallery/templates/renata-kowalczuk.eu/page.html
+++ b/sgallery/templates/renata-kowalczuk.eu/page.html
@@ -2,20 +2,38 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>{{page.title}}</title>
-	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/css/main.css">
 	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/hoborglabs/css/main.css">
+	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/css/main.css">
 	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 </head>
-<body>
+<body style="padding-top:80px">
 
 	{{{ body }}}
 	
-	<div class="container">
-		<div class="page-footer">
-			copyright 2012 - Wojtek Olędzki.
-			<span class="pull-right">
-				<a href="http://hoborglabs.com">Hoborglabs</a>
-			</span>
+	<div class="container arrow_box">
+		<div class="columns" style="margin: 20px 0">
+		</div>
+	</div>
+
+	<div class="footer" style="margin-top: 40px;">
+		<div class="container">
+			<div class="columns">
+				<div class="column_np one-third">
+					
+				</div><!-- 
+				--><div class="column_np one-third">
+				<!-- 
+					<span class="footer-logo">STUDIO PROJEKTOWE</span>
+				 -->
+				</div><!--
+				--><div class="column_np one-third" style="text-align: right;">
+					<p>
+						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
+						telefon: 512 149 366<br />
+						email: <!--<a href="mailto:info@renata-kowalczuk.eu">-->info@renata-kowalczuk.eu<!--</a>-->
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 	
