--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -56,8 +56,38 @@ h2 {
 
 	li {
 		display: inline-block;
+		margin-left: @gutter;
+		padding: 2px 0px;
 		text-shadow: 0 1px 0 #fff;
-		padding: 2px 10px;
+	}
+
+	.navigation--link {
+		font-size: 18px;
+		font-weight: bold;
+		text-decoration: none;
+		color: black;
+		/* animation */
+		-webkit-transition: 0.2s;
+		   -moz-transition: 0.2s;
+		        transition: 0.2s;
+	}
+	.navigation--active,
+	.navigation--link:hover {
+		text-shadow: 0 0 8px rgba(0,0,0,0.9);
+		color: #FFF;
+	}
+}
+.navigation--sub {
+	.navigation--link {
+		font-size: 14px;
+		color: #686868;
+		-webkit-transition: 0s;
+		   -moz-transition: 0s;
+		        transition: 0s;
+	}
+	.navigation--link:hover {
+		text-shadow: 0 0 0 #000;
+		color: #000;
 	}
 }
 
