[fixes #1] Fix image header issues

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -32,21 +32,19 @@
 	letter-spacing: 1px;
 	font-size: 18px;
 	font-weight: normal;
-	
+	white-space: nowrap;
+
 	position: relative;
 	top: -18px;
-	
-	-moz-transition-duration: 0.2s;
+
 	-webkit-transition-duration: 0.2s;
-	transition-duration: 0.2s;
+	   -moz-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 }
 
 .gallery-item:hover h4 {
 	top: -20px;
 	box-shadow: 1px 2px 4px rgba(0,0,0, 0.8);
-	-webkit-transform: rotate(10deg);
-	   -moz-transform: rotate(10deg);
-	        transform: rotate(10deg);
 }
 
 /* shame.css - http://csswizardry.com/2013/04/shame-css/ */
