[refs #2] updating CSS and tpls for gallery

--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -50,7 +50,7 @@
 
 	{{#has_photos}}
 	<div class="columns gallery">
-		<div id="photos"></div>
+		<ul id="photos" class="gallery--ul"></ul>
 		<div class="well" style="display:none;">
 			<span>Loading...</span>
 		</div>
