--- a/sgallery/templates/renata-kowalczuk.eu/batch.html
+++ b/sgallery/templates/renata-kowalczuk.eu/batch.html
@@ -1,11 +1,11 @@
 <!-- 
 {{#photos}}
- --><div class="column one-fourth">
-	<div class="gallery-item photo">
+ --><li class="column one-fourth">
+	<div class="photo">
 		<a href="/img-proxy.php{{ full-size }}">
 			<img src="{{ src }}" data-full-size="{{ full-size }}" />
 		</a>
 	</div>
-</div><!-- 
+</li><!-- 
 {{/photos}}
  -->
