--- a/sgallery/templates/renata-kowalczuk.eu/page.html
+++ b/sgallery/templates/renata-kowalczuk.eu/page.html
@@ -2,7 +2,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>{{page.title}}</title>
-	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/hoborglabs/css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" media="all" href="/static/styles/hoborglabs/css/main.css"> -->
 	<link rel="stylesheet" type="text/css" media="all" href="/static/styles/css/main.css">
 	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 </head>
@@ -10,23 +10,19 @@
 
 	{{{ body }}}
 	
-	<div class="container arrow_box">
-		<div class="columns" style="margin: 20px 0">
-		</div>
-	</div>
-
+	<div class="container arrow_box"><div class="columns"></div></div>
 	<div class="footer" style="margin-top: 40px;">
 		<div class="container">
 			<div class="columns">
-				<div class="column_np one-third">
+				<div class="column one-third">
 					
 				</div><!-- 
-				--><div class="column_np one-third">
+				--><div class="column one-third">
 				<!-- 
 					<span class="footer-logo">STUDIO PROJEKTOWE</span>
 				 -->
 				</div><!--
-				--><div class="column_np one-third" style="text-align: right;">
+				--><div class="column one-third" style="text-align: right;">
 					<p>
 						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
 						telefon: 512 149 366<br />
@@ -36,7 +32,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="overlay" class="modal-backdrop fade">
 		<div class="modal-panel" data-name="help">
 			<div class="modal">
