[refs #2] minor fixes in build script and html files

--- a/sgallery/templates/renata-kowalczuk.eu/page.html
+++ b/sgallery/templates/renata-kowalczuk.eu/page.html
@@ -9,24 +9,22 @@
 <body style="padding-top:80px">
 
 	{{{ body }}}
-	
+
 	<div class="container arrow_box"><div class="columns"></div></div>
 	<div class="footer" style="margin-top: 40px;">
 		<div class="container">
 			<div class="columns">
 				<div class="column one-third">
-					
-				</div><!-- 
-				--><div class="column one-third">
-				<!-- 
-					<span class="footer-logo">STUDIO PROJEKTOWE</span>
-				 -->
+
 				</div><!--
-				--><div class="column one-third" style="text-align: right;">
+				--><div class="column one-third">
+
+				</div><!--
+				--><div class="column one-third" style="text-align: right; padding-bottom: 5px;">
 					<p>
 						mgr inż. arch. <span class="name">Renata Kowalczuk</span><br />
-						telefon: 512 149 366<br />
-						email: <!--<a href="mailto:info@renata-kowalczuk.eu">-->info@renata-kowalczuk.eu<!--</a>-->
+						telefon: <strong>512 149 366</strong><br />
+						email: info@renata-kowalczuk.eu
 					</p>
 				</div>
 			</div>
@@ -47,7 +45,7 @@
 		</div>
 
 		<div class="modal-panel" data-name="preview">
-	
+
 			<div id="myCarousel" class="carousel slide">
 				<!-- Carousel items -->
 				<div class="carousel-inner">
