--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -2,16 +2,17 @@
 	<div class="container">
 		<a href="/"><img class="logo" src="/images/logo.png" style="float: left; width: 300px" /></a>
 		<ul class="navigation" style="float: left; width: 500px">
-			<!-- 
+			<!--
 			<li><a class="navigation--link" href="#">Oferta</a></li>
 			 -->
-			<li><a class="navigation--link navigation--active" href="/realizacje">Realizacje</a></li>
+			<li><a class="navigation--link navigation--active" href="/albums">Realizacje</a></li>
 			<li><a class="navigation--link" href="#">Kontakt</a></li>
-			<!-- 
+			<!--
 			<li><a class="navigation--link" href="#">Inspiracje</a></li>
 			<li><a class="navigation--link" href="#">Referencje</a></li>
 			 -->
 		</ul>
+		<!--
 		<ul class="navigation navigation--sub" style="float: left; width: 500px">
 			{{#slugs}}
 			<li class="{{class}}">
@@ -21,6 +22,7 @@
 			</li>
 			{{/slugs}}
 		</ul>
+		-->
 	</div>
 </div>
 
@@ -36,7 +38,7 @@
 	</div>
 
 	{{#has_albums}}
-	<div class="columns gallery"><!-- 
+	<div class="columns gallery"><!--
 		{{#albums}}
 		--><div class="column one-fourth">
 			<div class="gallery-item">
