Last changes before second deployment

--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -1,12 +1,12 @@
 <div class="topbar">
 	<div class="container">
 		<a href="/"><img class="logo" src="/images/logo.png" style="float: left; width: 300px" /></a>
-		<ul class="navigation" style="float: left; width: 500px">
+		<ul class="navigation" style="float: right; width: 500px; margin-top: 40px; margin-right: 10px; text-align: right;">
 			<!--
 			<li><a class="navigation--link" href="#">Oferta</a></li>
 			 -->
 			<li><a class="navigation--link navigation--active" href="/albums">Realizacje</a></li>
-			<li><a class="navigation--link" href="#">Kontakt</a></li>
+			<!--<li><a class="navigation--link" href="#">Kontakt</a></li>-->
 			<!--
 			<li><a class="navigation--link" href="#">Inspiracje</a></li>
 			<li><a class="navigation--link" href="#">Referencje</a></li>
