[fixes #9] Preview image is now the center of the page

--- a/styles/less/gallery.less
+++ b/styles/less/gallery.less
@@ -47,6 +47,7 @@ img.photo-preview {
 	max-height: 100%;
 	max-width: 100%;
 	margin: auto;
+	display: block;
 	-webkit-transition: 0.3s;
 	   -moz-transition: 0.3s;
 	        transition: 0.3s;
