[fixes #10] preview gallery image without img-proxy.php

--- a/sgallery/templates/renata-kowalczuk.eu/batch.html
+++ b/sgallery/templates/renata-kowalczuk.eu/batch.html
@@ -2,8 +2,8 @@
 {{#photos}}
  --><li class="column one-fourth">
 	<div class="photo">
-		<a href="/img-proxy.php{{ full-size }}">
-			<img src="{{ src }}" data-full-size="{{ full-size }}" />
+		<a href="/images/realizacje{{ full-size }}">
+			<img src="{{ src }}" data-full-size="/images/realizacje{{ full-size }}" />
 		</a>
 	</div>
 </li><!-- 
