--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -6,7 +6,7 @@
 			<li><a class="navigation--link" href="#">Oferta</a></li>
 			 -->
 			<li><a class="navigation--link navigation--active" href="/albums">Realizacje</a></li>
-			<!--<li><a class="navigation--link" href="#">Kontakt</a></li>-->
+			<li><a class="navigation--link" href="/contact.html">Kontakt</a></li>
 			<!--
 			<li><a class="navigation--link" href="#">Inspiracje</a></li>
 			<li><a class="navigation--link" href="#">Referencje</a></li>
