--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -2,9 +2,7 @@
 	<div class="container">
 		<a href="/"><img class="logo" src="/images/logo.png" style="float: left; width: 300px" /></a>
 		<ul class="navigation" style="float: right; width: 500px; margin-top: 40px; margin-right: 10px; text-align: right;">
-			<!--
-			<li><a class="navigation--link" href="#">Oferta</a></li>
-			 -->
+			<li><a class="navigation--link" href="/offer.html">Oferta</a></li>
 			<li><a class="navigation--link navigation--active" href="/albums">Realizacje</a></li>
 			<li><a class="navigation--link" href="/contact.html">Kontakt</a></li>
 			<!--
