[refs #15] Dodane strzalki do podgladu w galerii
WAZNE: odaplić `ant validate`

--- a/sgallery/templates/renata-kowalczuk.eu/page.html
+++ b/sgallery/templates/renata-kowalczuk.eu/page.html
@@ -45,15 +45,13 @@
 		</div>
 
 		<div class="modal-panel" data-name="preview">
-
-			<div id="myCarousel" class="carousel slide">
-				<!-- Carousel items -->
-				<div class="carousel-inner">
-					<div class="active item" id="img-preview">
-						<img class="photo-preview" src="" />
-						<p class="photo-message" style="display: none;">Loading ...</p>
-					</div>
+			<div id="js-album_preview">
+				<div id="img-preview" class="gallery__preview">
+					<img class="photo-preview" src="" />
+					<p class="photo-message" style="display: none;">Loading ...</p>
 				</div>
+				<a class="preview__prev js-prev" href="#"></a>
+				<a class="preview__next js-next" href="#"></a>
 			</div>
 		</div>
 	</div>
