--- a/styles/less/gallery.less
+++ b/styles/less/gallery.less
@@ -46,6 +46,7 @@
 img.photo-preview {
 	max-height: 100%;
 	max-width: 100%;
+	display: block;
 	margin: auto;
 	display: block;
 	-webkit-transition: 0.3s;
@@ -58,6 +59,30 @@ img.photo-preview.slide-out {
 img.photo-preview.slide-in {
 	padding-left: 200%;
 }
+.preview__prev,
+.preview__next {
+	display: block;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 100px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: rgba(255,255,255,0.2);
+}
+.preview__prev:hover,
+.preview__next:hover {
+	background-color: rgba(255,255,255,0.4);
+}
+.preview__prev {
+	left: 0;
+	background-image: url(../gfx/i_prev.png);
+}
+.preview__next {
+	right: 0;
+	background-image: url(../gfx/i_next.png);
+}
+
 
 .photo {
 	padding: 4px;
