--- a/styles/less/grid.less
+++ b/styles/less/grid.less
@@ -5,7 +5,9 @@
 .container {
 	width: @bodyWidth;
 	margin: 0 auto;
-	//background-color: #CCC;
+}
+.container--full-width {
+	width: 100%;
 }
 
 /**
@@ -18,6 +20,12 @@
 	margin-left: -@gutter/2; /* [3] */
 	width: 100%;
 }
+.container--full-width .column,
+.container--full-width .columns {
+	margin: 0;
+	padding: 0;
+}
+
 
 /**
  * overflow: hidden - Thanks Csswizadry! If you want to know more check these links:
@@ -78,6 +86,9 @@
 }
 .one-fourth {
 	width: 25%;
+}
+.one-fifth {
+	width: 20%;
 }
 // twos
 .two-thirds {
