[refs #11] poprawki w szablonach do sGallery

--- a/sgallery/templates/renata-kowalczuk.eu/page.html
+++ b/sgallery/templates/renata-kowalczuk.eu/page.html
@@ -10,7 +10,7 @@
 
 	{{{ body }}}
 
-	<div class="container arrow_box"><div class="columns"></div></div>
+	<div class="container"><div class="columns"></div></div>
 	<div class="footer" style="margin-top: 40px;">
 		<div class="container">
 			<div class="columns">
