--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -93,18 +93,11 @@ h2 {
 
 .footer {
 	padding: @gutter*0.5 0 0 0;
-	//background-color: @reniasGreen;
-	//color: #505050;
 	color: #CDCDCD;
 	background-color: #393939;
-	//text-shadow: 0px 1px 0px rgba(255,255,255,.7);
-	
-	//background-image: linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	//background-image: -o-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	//background-image: -moz-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	//background-image: -webkit-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	//background-image: -ms-linear-gradient(bottom, #97C54B 99%, rgb(51,162,0) 85%);
-	//background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.99, #97C54B), color-stop(0.96, rgb(177, 218, 118)));
+	background-image: url(../gfx/f_bg.png);
+	background-repeat: no-repeat;
+	background-position: 77% 0;
 
 	.name {
 		font-variant: small-caps;
