--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -1,26 +1,15 @@
 <div class="topbar">
 	<div class="container">
-		<a href="/"><img class="logo" src="/images/logo.png" style="float: left; width: 300px" /></a>
-		<ul class="navigation" style="float: right; width: 500px; margin-top: 40px; margin-right: 10px; text-align: right;">
+		<h1 class="brand"><a href="/" title="Studio Projektowe Renata Kowalczuk" /></h1>
+	</div>
+</div>
+<div class="topbar--navigation">
+	<div class="container">
+		<ul class="navigation">
 			<li><a class="navigation--link" href="/offer.html">Oferta</a></li>
 			<li><a class="navigation--link navigation--active" href="/albums">Realizacje</a></li>
 			<li><a class="navigation--link" href="/contact.html">Kontakt</a></li>
-			<!--
-			<li><a class="navigation--link" href="#">Inspiracje</a></li>
-			<li><a class="navigation--link" href="#">Referencje</a></li>
-			 -->
 		</ul>
-		<!--
-		<ul class="navigation navigation--sub" style="float: left; width: 500px">
-			{{#slugs}}
-			<li class="{{class}}">
-				{{# href }}<a class="navigation--link" href="/albums{{ href }}">{{/href}}
-					{{ text }}
-				{{# href }}</a> <span class="divider">/</span>{{/href}}
-			</li>
-			{{/slugs}}
-		</ul>
-		-->
 	</div>
 </div>
 
