--- a/styles/less/page.less
+++ b/styles/less/page.less
@@ -10,18 +10,47 @@ body {
 	// stick to top
 	position: fixed;
 	z-index: 1000;
-	width: 100%;
-	height: 80px;
 	top: 0;
 	left: 0;
-	
+	width: 100%;
+	height: 80px;
+
 	// decoration
-//	background-color: @lightGray;
 	background-color: #FFF;
 	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
+.topbar--navigation {
+	// stick to top
+	position: fixed;
+	z-index: 1001;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 80px;
+
+	// click through to logo
+	pointer-events: none;
+}
+
+.brand {
+	z-index: 1002;
+	width: 300px;
+	max-width: 40%;
+	height: 73px;
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+.brand > a {
+	display: block;
+	width: 100%;
+	height: 73px;
+	background: url("/images/logo.png") no-repeat center center;
+	background-size: contain;
+}
+
 .hero {
-	
+
 	h2 {
 		font-variant: small-caps;
 		font-size: 32px;
@@ -48,11 +77,19 @@ h2 {
  *
  */
 .navigation {
+	// allow click (turned off for titlebar--navigation)
+	pointer-events: auto;
+
 	list-style: none;
 	margin: 0;
 	padding: 4px 0;
 	width: @bodyWidth;
-	margin: 0 auto;
+	float: right;
+	width: 400px;
+	max-width: 60%;
+	margin-top: 40px;
+	margin-right: 10px;
+	text-align: right;
 
 	li {
 		display: inline-block;
@@ -120,7 +157,7 @@ h2 {
 
 
 .X {
-	
+
 // Gallery header
 .caption {
 	text-transform: uppercase;
@@ -135,7 +172,7 @@ h2 {
 .gallery-item .subcaption {
 	text-shadow: 0px 0px 4px rgba(0,0,0,0.3);
 	color: rgba(0,0,0,0.3);
-	
+
 	/* animation */
 	-webkit-transition: 0.3s;
 	   -moz-transition: 0.3s;
@@ -182,4 +219,33 @@ h2 {
 	border-width: 60px;
 	left: 90%;
 	margin-left: -60px;
+}
+
+@media (max-width: @screenLap) {
+	.topbar {
+		height: 40px;
+	}
+	.topbar--navigation {
+		position: relative;
+		z-index: 100;
+		width: 100%;
+		height: auto;
+	}
+	.navigation {
+		max-width: 100%;
+		margin-top: -34px;
+	}
+	.brand {
+		width: 100%;
+		max-width: 100%;
+		height: 36px;
+		float: left;
+		padding: 4px;
+	}
+	.brand > a {
+		background-image: url("/images/logo-m.png");
+		width: 282px;
+		height: 36px;
+		margin: 0 auto;
+	}
 }
