[refs #18] Limiting gallery viewport to 1480px

--- a/sgallery/templates/renata-kowalczuk.eu/album.html
+++ b/sgallery/templates/renata-kowalczuk.eu/album.html
@@ -36,7 +36,7 @@
 	</div>
 
 	{{#has_albums}}
-	<div class="columns gallery"><!--
+	<div class="columns gallery"><div class="gallery__content"><!--
 		{{#albums}}
 		--><div class="column one-fourth">
 			<div class="gallery-item">
@@ -45,7 +45,7 @@
 			</div>
 		</div><!--
 		{{/albums}}
-	--></div>
+	--></div></div>
 	{{/has_albums}}
 
 	{{#has_photos}}
