--- a/styles/less/gallery.less
+++ b/styles/less/gallery.less
@@ -4,9 +4,14 @@
 	padding: 2*@gutter @gutter/2 0 0; // I smell some problems with IE :(
 	box-shadow: inset 5px 0px 7px rgba(0,0,0,0.5);
 }
+.gallery__content {
+	margin: 0 auto;
+	max-width: 1480px
+}
 .gallery--ul {
 	padding: 0 0 20px 0;
-	margin: 0;
+	margin: 0 auto;
+	max-width: 1480px
 }
 .gallery-item img {
 	box-shadow: 0px 0px 4px #000;
@@ -113,4 +118,3 @@ img.photo-preview.slide-in {
 		display: block;
 	}
 }
-
